--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "astroplate",
-  "version": "5.4.2",
+  "version": "5.5.1",
   "description": "Astro and Tailwindcss boilerplate",
   "author": "zeon.studio",
   "license": "MIT",
@@ -21,32 +21,32 @@
     "@astrojs/react": "4.2.4",
     "@astrojs/rss": "4.0.11",
     "@astrojs/sitemap": "3.3.0",
-    "astro": "5.7.4",
+    "@justinribeiro/lite-youtube": "^1.7.1",
+    "astro": "5.7.2",
     "astro-auto-import": "^0.4.4",
     "astro-font": "^1.1.0",
     "date-fns": "^4.1.0",
     "disqus-react": "^1.1.6",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
-    "marked": "^15.0.8",
+    "marked": "^15.0.11",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-lite-youtube-embed": "^2.4.0",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^9.0.0",
     "swiper": "^11.2.6",
-    "vite": "^6.3.2"
+    "vite": "^6.3.3"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.4",
-    "@types/node": "22.14.1",
+    "@types/node": "22.15.3",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
-    "eslint": "^9.25.0",
+    "eslint": "^9.25.1",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
