--- a/src/config/config.json
+++ b/src/config/config.json
@@ -28,13 +28,8 @@
   },
 
   "google_tag_manager": {
-    "enable": false,
-    "gtm_id": "GTM-XXXXXX"
-  },
-
-  "google_tag_manager": {
-    "enable": false,
-    "gtm_id": "GTM-XXXXXX"
+    "enable": true,
+    "gtm_id": "GTM-TVKCM9R7"
   },
 
   "disqus": {
