--- a/src/config/config.json
+++ b/src/config/config.json
@@ -9,7 +9,7 @@
 
   "settings": {
     "search": false,
-    "sticky_header": true,
+    "sticky_header": false,
     "theme_switcher": true,
     "default_theme": "system",
     "pagination": 4,
@@ -18,7 +18,8 @@
   },
 
   "params": {
-    "contact_form_action": "#"
+    "contact_form_action": "#",
+    "quote_form_action": "#"
   },
 
   "navigation_button": {
