Adding Phone Number
Phone number added to various areas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "files.associations": {
-    "*.mdx": "markdown"
+    "*.mdx": "markdown",
+    "*.css": "tailwindcss"
   },
   "tailwindCSS.experimental.configFile": "src/styles/main.css"
 }
