--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   },
   "dependencies": {
     "@astrojs/check": "0.9.4",
-    "@astrojs/mdx": "4.3.0",
+    "@astrojs/mdx": "^4.3.4",
     "@astrojs/react": "4.3.0",
     "@astrojs/rss": "4.0.12",
-    "@astrojs/sitemap": "3.4.1",
+    "@astrojs/sitemap": "^3.5.0",
     "@digi4care/astro-google-tagmanager": "^1.4.0",
     "@justinribeiro/lite-youtube": "^1.8.0",
-    "astro": "5.10.1",
+    "astro": "^5.13.2",
     "astro-auto-import": "^0.4.4",
     "astro-font": "^1.1.0",
     "astro-lightgallery": "^2.0.0",
