--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "sharp": "0.33.5",
     "tailwindcss": "^4.1.4",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "wrangler": "^4.34.0"
   }
 }
