--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,6 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "LintLifter",
+  "name": "lintlifter",
   // Update to today's date
   "compatibility_date": "2025-09-05",
   "assets": {
